--- a/package.json
+++ b/package.json
@@ -2,41 +2,43 @@
   "name": "upcoming-events",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "yarn@4.0.2",
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --skip-plugins eslint",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-rc.12",
     "buefy": "^0.9.8",
     "core-js": "^3.6.5",
-    "eslint-plugin-import-alias": "^1.2.0",
-    "sass": "^1.32.6",
-    "sass-loader": "^10.1.1",
-    "vue": "^2.6.11"
+    "vue": "^2.7.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "^4.5.13",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-e2e-cypress": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-pwa": "~5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-plugin-typescript": "~5.0.8",
+    "@vue/cli-plugin-vuex": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "cypress": "^9.7.0",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "typescript": "^4.3.4",
-    "vue-template-compiler": "^2.6.11"
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import-alias": "^1.2.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "node-gyp": "^10.0.1",
+    "prettier": "^3.1.0",
+    "sass": "^1.32.6",
+    "sass-loader": "^10.1.1",
+    "typescript": "^5.3.2"
   },
   "browserslist": [
     "> 1%",
