--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "buefy": "^0.9.8",
     "core-js": "^3.6.5",
-    "vue": "^2.7.0"
+    "pinia": "^2.1.7",
+    "vue": "^2.7.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
